Form im template #211

--- a/app/templates/admin_settings.html
+++ b/app/templates/admin_settings.html
@@ -1,6 +1,6 @@
 {% extends "home.html" %}
 
-{% load static i18n django_bootstrap_breadcrumbs permission_tags %}
+{% load static i18n django_bootstrap_breadcrumbs permission_tags widget_tweaks %}
 
 {% block breadcrumbs %}
 	{{ block.super }}
@@ -42,72 +42,64 @@
 	    <!--Panel 2-->
 	    <div class="tab-pane fade" id="panel2" role="tabpanel">
 	      	<div class="panel panel-default">
-	          	<div class="panel-body">
-	            	<h3><b>Outgoing Server (SMTP)</b></h3>
-	            	<div class="panel panel-default">
-	              		<div class="panel-body">
-	                		<h4><b>Settings</b></b></h4>
-                			<hr>
-		                	<div class="form-group label-floating">
-		                  		<label class="control-label" for="focusedInput1">Description</label>
-		                  		<input class="form-control" id="focusedInput1" type="text">
-		                	</div>
-		                	<div class="form-group label-floating">
-		                  		<label class="control-label" for="focusedInput1">Server</label>
-		                  		<input class="form-control" id="focusedInput1" type="text">
-		                	</div>
-		                	<div class="form-group label-floating">
-		                  		<label for="number" class="col-md_10 control-label">Port</label>
-		                  		<div class="col-md-2">
-		                    		<input type="number" class="form-control" id="inputNumber">
-		                  		</div>
-		                  		<div>
-		                    		<label for="number">Deafault:</label> 25
-		                  		</div>
-		                	</div>
-	              		</div>
-	            	</div>
-	        	</div>
-	        	<div class="panel-body">
-		            <div class="panel panel-default">
-		              	<div class="panel-body">
-		                	<h4><b>Security and Authentication</b></h4>
-		                	<hr>
-		                	<div class="form-group label-floating">
-		                  		<label class="control-label" for="focusedInput1">User Name</label>
-		                  		<input class="form-control" id="focusedInput1" type="text">
-		                	</div>
-		                	<div class="form-group label-floating">
-		                  		<label class="control-label" for="focusedInput1">Password</label>
-		                  		<input class="form-control" id="focusedInput1" type="password">
-		                	</div>
-		                	<div class="form-group">
-		                  		<p><b>Use safe contection</b></p>
-		                  		<div class="col-md-10">
-		                    		<div class="radio radio-primary">
-		                      			<label>
-		                        			<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
-		                        			No
-		                      			</label>
-		                      			<label>
-		                        			<input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-		                        			TSL, If available
-				    	                </label>
-		    		                    <label>
-		                        			<input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
-		                        			TSL
-		                      			</label>
-		                      			<label>
-		                        			<input type="radio" name="optionsRadios" id="optionsRadios4" value="option4" checked="">
-		                        			SSL
-		                      			</label>
-		                    		</div>
-		                  		</div>
-		                	</div>
+    			<form class="form-horizontal" method="post">
+		          	<div class="panel-body">
+		            	<h3><b>{% trans "Outgoing Server (SMTP)" %}</b></h3>
+		            	<div class="panel panel-default">
+		              		<div class="panel-body">
+		                		<h4><b>{% trans "Settings" %}</b></b></h4>
+	                			<hr>
+			                	<div class="form-group label-floating">
+			                  		<label class="control-label" for="{{ form.description.auto_id }}">{{ form.description.label }}</label>
+			                  		{% render_field form.description class='form-control' %}
+			                	</div>
+			                	<div class="form-group label-floating">
+			                  		<label class="control-label" for="{{ form.host.auto_id }}">{{ form.host.label }}</label>
+			                  		{% render_field form.host class='form-control' %}
+			                	</div>
+			                	<div class="form-group label-floating">
+			                  		<label for="{{ form.port.auto_id }}" class="col-md_10 control-label">{{ form.port.label }}</label>
+			                  		<div class="col-md-2">
+			                    		{% render_field form.port class='form-control' %}
+			                  		</div>
+			                  		<div>
+			                    		<label for="number">{% trans "Default:" %}</label> 25
+			                  		</div>
+			                	</div>
+		              		</div>
 		            	</div>
-		          	</div>
-		          	<button type="button" class="btn btn-success btn-raised">Save changes</button>
-	        	</div>
+		        	</div>
+		        	<div class="panel-body">
+			            <div class="panel panel-default">
+			              	<div class="panel-body">
+			                	<h4><b>{% trans "Security and authentication" %}</b></h4>
+			                	<hr>
+			                	<div class="form-group label-floating">
+			                  		<label class="control-label" for="{{ form.username.auto_id }}">{{ form.username.label }}</label>
+			                  		<input class="form-control" id="focusedInput1" type="text">
+			                	</div>
+			                	<div class="form-group label-floating">
+			                  		<label class="control-label" for="{{ form.password.auto_id }}">{{ form.password.label }}</label>
+			                  		{% render_field form.password class='form-control' %}
+			                	</div>
+			                	<div class="form-group">
+			                  		<p><b>{{ form.safe.connection.label }}</b></p>
+			                  		<div class="col-md-10">
+			                    		<div class="radio radio-primary">
+			                      			{% for field in form.safe_conection.field.choices %}
+			                      				<label>
+				                        			<input type="radio" name="safe_conection" id="{{ fiel.auto_id }}" value="{{ field.value }}">
+				                        			{{ field.label }}
+				                      			</label>	
+			                      			{% endfor %}
+			                    		</div>
+			                  		</div>
+			                	</div>
+			            	</div>
+			          	</div>
+			          	<button type="button" class="btn btn-success btn-raised">{% trans "Save changes" %}</button>
+		        	</div>
+		        </form>
 	    	</div>
 		</div>
 	  
