--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -168,6 +168,7 @@
                 {% endif %}
             </ul>
         </nav>
+        <div class="row" id="modal_course">
     </div>
     <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
 {% endblock %}
