Show text changes to template [Issue #232]

--- a/courses/templates/course/course_card.html
+++ b/courses/templates/course/course_card.html
@@ -38,7 +38,7 @@
             <p>
               <b>{% trans 'Description' %}:</b>
               <i>
-                {{course.content}}
+                {{course.content | safe }}
               </i>
             </p>
           </div>
