--- a/courses/templates/subject_category/index.html
+++ b/courses/templates/subject_category/index.html
@@ -58,7 +58,7 @@
     	</div>
     	<div class="panel-body">
       		<p>
-        		{{subject.description|linebreaks}}
+        		{{subject.description| safe }}
       		</p>
     	</div>
   	</div>
