--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="panel-body">
       <p>
-        {{topic.description|linebreaks}}
+        {{topic.description|safe}}
       </p>
     </div>
   </div>
