Show text changes to template [Issue #232]

--- a/courses/templates/subject/form_view_student.html
+++ b/courses/templates/subject/form_view_student.html
@@ -27,7 +27,7 @@
         <div class="presentation">
           <p>
             <i>
-              {{topic.description|linebreaks}}
+              {{topic.description|safe}}
             </i>
           </p>
 
