--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -39,7 +39,7 @@
       <div class="presentation_{{topic.slug}}">
         <p>
           <i>
-            {{topic.description|linebreaks}}
+            {{topic.description|safe}}
           </i>
         </p>
       </div>
