--- a/courses/templates/course/course_card.html
+++ b/courses/templates/course/course_card.html
@@ -20,7 +20,7 @@
                    </button>
                   <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
                     <li><a href="{% url 'course:replicate_course' course.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
-                    <li><a href="javascript:delete_course('{% url 'course:delete' course.slug %}', '{{ course.slug }}', '{% trans "Are you sure you want to delete this course?" %}', '{% url 'course:manage' %}')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                    <li><a href="javascript:delete_course.get('{% url 'course:delete' course.slug %}','#course','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                   </ul>
                 </div>
             </div>
@@ -64,3 +64,4 @@
         </div>
     </div>
 </div>
+ <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
