bug radio button #235

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,12 +7,12 @@
         <script type="text/javascript">
             {% if page_obj and paginator %}
                 var pageNum = {{ page_obj.number }}; // The latest page loaded
-                var numberPages = {{ paginator.num_pages }}; // Indicates the number of pages    
+                var numberPages = {{ paginator.num_pages }}; // Indicates the number of pages
             {% else %}
                 var pageNum = 0 ; // The latest page loaded
                 var numberPages = 0 ; // Indicates the number of pages
             {% endif %}
-            
+
             var baseUrl = '{% url "app:index" %}';
 
             // loadOnScroll handler
@@ -55,6 +55,7 @@
 
             $(document).ready(function(){
                $(window).bind('scroll', loadOnScroll);
+               $.material.init();
             });
         </script>
     {% endif %}
