--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -10,6 +10,7 @@
 {% block javascript %}
   <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/modal_subject.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/topic_editation_presentation.js' %}"></script>
 {% endblock %}
 
 {% block breadcrumbs %}
