--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -49,7 +49,7 @@
                                     <div class="col-md-10 col-sm-10 col-xs-10 col-lg-10 col-lg-offset-1">
                                       <div class="checkbox">
                                         <label>
-                                            <input form="form-login" type="checkbox" name="checkbox"><span class="checkbox-material"><span class="check"></span></span> {% trans 'Remember Email' %}
+                                            <input form="form-login" type="checkbox" name="checkbox"><span class="checkbox-material"></span> {% trans 'Remember Email' %}
                                         </label>
                                       </div>
                                     </div>
