Ajuste in template form #211

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -445,3 +445,12 @@ ul, li {
   right: 5%;
   font-size: 20px;
 }
+
+/* === Amadeus settings*/
+#panel2 .form-group{
+  margin: 0;
+}
+
+#panel2 .col-md-2, #panel2 .col-md-10{
+  padding-left: 0;
+}
